[package]
name = "cyberdeck"
version = "0.0.6"
edition = "2018"
description = "A library for easily creating WebRTC data channel connections"
license = "MIT OR Apache-2.0"
readme="README.md"
homepage="https://github.com/richardanaya/cyberdeck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interceptor = "0.4.0"
webrtc = "0.2.0"
tokio = { version = "1.12.0", features = ["full"] }
anyhow = "1.0"
base64 = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "0.8"
bytes = "1.1.0"