[package]
name = "cyberdeck"
version = "0.1.3"
edition = "2018"
description = "A library for easily creating WebRTC data channel connections"
license = "MIT OR Apache-2.0"
readme="README.md"
homepage="https://github.com/richardanaya/cyberdeck"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
webrtc = "0.7"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
bytes = "1.1.0"
rand = "0.8.5"

[dev-dependencies]
axum = "0.5.13"
